# Trabalho_Haskell

./: .gitignore  Brain.hs  EXPLICACAO.md  Game.hs  Main.hs  Physics.hs  README.md  Terminal.hs  Types.hs  Visual.hs  cabal.project  qbarchallenge.cabal
contexto/: contexto.md
