cabal-version: 3.0
name:          qbarchallenge
version:       0.1.0.0
build-type:    Simple

executable qbarchallenge
    main-is:          Main.hs
    other-modules:    Types, Physics, Brain
    build-depends:
        base   >= 4.0 && < 5,
        hmatrix >= 0.20,
        random  >= 1.2,
        mtl     >= 2.2
    default-language: Haskell2010
    ghc-options:      -Wall
